@@ -1,0 +1,1 @@
+static COB_KEYWORD_INLINE int foo () { return 0; }
